[package]
name = "test-rollup"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]

template-risc0 = { version = "0.2.0" }
template-stf = { version = "0.2.0", features = ["native"] }

sov-state                   = { version = "0.2.0" }
sov-db                      = { version = "0.2.0" }
sov-sequencer               = { version = "0.2.0" }
sov-rollup-interface        = { version = "0.2.0", features = ["mocks"] }
sov-modules-api             = { version = "0.2.0", features = ["native"] }
sov-accounts                = { version = "0.2.0", features = ["native"] }
sov-bank                    = { version = "0.2.0", features = ["native"] }
sov-sequencer-registry      = { version = "0.2.0", features = ["native"] }
sov-risc0-adapter           = { version = "0.2.0", features = ["native"] }
sov-stf-runner              = { version = "0.2.0", features = ["native"] }
sov-modules-stf-template    = { version = "0.2.0", features = ["native"] }

borsh       = { version = "0.10.3", features = ["rc", "bytes"] }
clap        = { version = "4.2.7", features = ["derive"] }
serde       = { version = "1.0.188", features = ["derive", "rc"] }
serde_json  = { version = "1.0" }
tracing     = { version = "0.1.37" }
jsonrpsee   = { version = "0.20.1", features = ["jsonrpsee-types"] }
anyhow      = { version = "1.0.68" }
tokio       = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.5"

[features]
default = []

[[bin]]
name = "node"
path = "src/bin/node.rs"

[[bin]]
name = "cli_wallet"
path = "src/bin/cli_wallet.rs"

