[package]
name = "guest-mock-starter"
version = "0.2.0"
edition = "2021"
resolver = "2"

[workspace]

[dependencies]
anyhow = "1.0.68"
risc0-zkvm = { version = "0.18", default-features = false, features = ["std"] }
risc0-zkvm-platform = "0.18"
stf-starter = { path = "../../../stf" }
sov-risc0-adapter = { version = "0.2.0" }
sov-rollup-interface = { version = "0.2.0", features = ["mocks"] }

[patch.crates-io]
sha2                                = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2/v0.10.6-risc0" }
sov-risc0-adapter                   = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", branch = "nightly" }
sov-rollup-interface                = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", branch = "nightly" }
sov-stf-runner                      = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", branch = "nightly" }
sov-bank                            = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", branch = "nightly" }
sov-accounts                        = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", branch = "nightly" }
sov-first-read-last-write-cache     = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", branch = "nightly" }
sov-modules-macros                  = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", branch = "nightly" }
sov-sequencer-registry              = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", branch = "nightly" }
sov-state                           = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", branch = "nightly" }
sov-modules-api                     = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", branch = "nightly" }
sov-modules-stf-template            = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", branch = "nightly" }

[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
debug = 1
lto = true

[profile.release.build-override]
opt-level = 3

